Fixed string attribute overflow issue

--- a/src/WebComponents/Attributes/PersistentObjectAttributeString/persistent-object-attribute-string.scss
+++ b/src/WebComponents/Attributes/PersistentObjectAttributeString/persistent-object-attribute-string.scss
@@ -2,6 +2,7 @@
 
 :host {
 	@include layout-horizontal();
+	overflow: hidden;
 
 	span {
 		overflow: hidden;
